added getSpecialShopping path
